--- a/docs/src/components/ThemeSwitcher/ThemeSwitcher.css
+++ b/docs/src/components/ThemeSwitcher/ThemeSwitcher.css
@@ -1,7 +1,7 @@
 .hitbox {
   display: inline-block;
   cursor: pointer;
-  padding: 20px;
+  padding: 19px;
   margin: 0px;
 }
 .hitbox ui-icon {
